# tablet-sync-epub

./: .gitignore  GEMINI.md  LICENSE.md  PROJECT.md  README.md  main.py  pyproject.toml
.gemini/: settings.json
.gemini/skills/code-rewriter/: SKILL.md
src/tablet_sync_epub/: __main__.py  app.py  device_fs.py
tests/: test_logic.py
