[tool.briefcase]
project_name = "Tablet Sync EPUB"
bundle = "com.jhwangus"
version = "0.1.0"
url = "https://github.com/jhwangus/tablet-sync-epub"
author = "jhwangus"
author_email = "jhwangus@example.com"

[project.license]
text = "MIT"

[tool.briefcase.app.tablet-sync-epub]
formal_name = "Tablet Sync EPUB"
description = "Synchronize EPUB files to Kindle and Android devices"
icon = "assets/Foothill"
sources = ["src/tablet_sync_epub"]
requires = [
    "ttkwidgets",
    "pillow"
]

[tool.briefcase.app.tablet-sync-epub.macOS]
requires = [
    "toga-cocoa~=0.4.0",
]

[tool.briefcase.app.tablet-sync-epub.linux]
requires = [
    "toga-gtk~=0.4.0",
]

[tool.briefcase.app.tablet-sync-epub.windows]
requires = []

[tool.briefcase.app.tablet-sync-epub.android]
requires = [
    "toga-android~=0.4.0",
]

[tool.briefcase.app.tablet-sync-epub.iOS]
requires = [
    "toga-iOS~=0.4.0",
]
