[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tablet-sync-epub"
version = "0.1.0"
description = "Synchronize EPUB files to KOReader and Android devices"
authors = [
  { name="jhwangus", email="jhwangus@example.com" },
]
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.10"
dependencies = [
    "ttkwidgets",
    "pillow",
    "platformdirs",
    "pywin32; sys_platform == 'win32'"
]

[project.urls]
Homepage = "https://github.com/jhwangus/tablet-sync-epub"

[project.scripts]
tablet-sync-epub = "tablet_sync_epub.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]
